[project]
name = "cleiton-rasta"
version = "0.1.0"
description = "Bot de discord do servidor de Discord dos \"Eternos Pratas\""
authors = [
    {name = "João Paulo Carvalho",email = "jjpaulo2@protonmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "discord-py (>=2.6.2,<3.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyportainer (>=1.0.40,<2.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
mypy = "^1.17.1"
bandit = "^1.8.6"
ipython = "^9.4.0"

